# openrca-signoz-view

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/signoz/: JVM.json  Mysql.json  OSLinux.json  Redis.json  metric-app.json  metric-container.json
